--- a/application-dept.yml
+++ b/application-dept.yml
@@ -2,21 +2,35 @@ spring:
     profiles:
          active:
               - dev
-
-
 ---
 server:
-  port: 8201
+  port: 8001
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
+  type-aliases-package: com.cbg.springcloud.bean    # 所有Entity别名类所在包
+  mapper-locations:
+    - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+
 spring:
       profiles: dev
       application:
-            name:  cbg-dev
+            name: congig-dept
+      datasource:
+    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+    driver-class-name: com.mysql.cj.jdbc.Driver              # mysql驱动包
+    url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
+    username: root
+    password: 
+    dbcp2:
+      min-idle: 5                                           # 数据库连接池的最小维持连接数
+      initial-size: 5                                       # 初始化连接数
+      max-total: 5                                          # 最大连接数
+      max-wait-millis: 200
+
 eureka:
-
-  client:
-        service-url:
-                  defaultZone: http://eureka-dev.com:7001/eureka/
-
+   client:   #客户端注册进eureka服务列表内
+       service-url:
+         defaultZone: http://eureka7001.com:7001/eureka/
 
 
 
