--- a/application-dept.yml
+++ b/application-dept.yml
@@ -12,10 +12,10 @@ mybatis:
     - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 
 spring:
-      profiles: dev
-      application:
+   profiles: dev
+  application:
             name: congig-dept
-      datasource:
+  datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver              # mysql驱动包
     url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
@@ -25,7 +25,7 @@ spring:
       min-idle: 5                                           # 数据库连接池的最小维持连接数
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
-      max-wait-millis: 200
+      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 
 eureka:
    client:   #客户端注册进eureka服务列表内
