--- a/application-client.yml
+++ b/application-client.yml
@@ -15,7 +15,7 @@ eureka:
 
   client:
         service-url:
-                  defaultZone: http://eureka-dev.com:7001/eureka/
+                  defaultZone: http://localhost:7001/eureka/
 
 
 
