--- a/application-client.yml
+++ b/application-client.yml
@@ -16,7 +16,8 @@ eureka:
   client:
         service-url:
                   defaultZone: http://localhost:7001/eureka/
-
+chen:
+    info: chen
 
 
 
